Fixed: text overflowing on error modal

--- a/css/modals.css
+++ b/css/modals.css
@@ -19,6 +19,7 @@ button {
 
 .verification .message_warning.warning {
     margin-bottom: 30px;
+    word-break: break-word;
 }
 
 .verification .target {
